# rollit

./: .bandit  .editorconfig  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  .style.yapf  .yamllint.yaml  README.rst  dialect-file-schema.yaml  generate-parser.py  grammar.lark  grammar.peg  grammar.tatsu  pytest.ini  setup.cfg  setup.py
.vim/: coc-settings.json
docs/: Makefile  conf.py  index.rst  spelling_wordlist.txt
docs/api-reference/rollit/: modules.rst  rollit.ast.actions.rst  rollit.ast.base.rst  rollit.ast.constants.rst  rollit.ast.elements.rst  rollit.ast.internal.rst  rollit.ast.rst  rollit.ast.util.rst  rollit.dialect.rst  rollit.dialects.default.rst  rollit.dialects.rst  rollit.elements.rst  rollit.exceptions.rst  rollit.execution.rst  rollit.extra.pygments.rst  rollit.extra.rst  rollit.grammar.rst  rollit.langref.rst  rollit.main.rst  rollit.model.rst  rollit.objects.rst  rollit.parser.rst  rollit.repl.base.rst  rollit.repl.pretty.rst  rollit.repl.rst  rollit.rli.accretion.rst  rollit.rli.base.rst  rollit.rli.blueprint.rst  rollit.rli.deferred.rst  rollit.rli.rst  rollit.rst  rollit.runtime.base.rst  rollit.runtime.context.rst  rollit.runtime.core.rst  rollit.runtime.libraries.rst  rollit.runtime.load_evaluators.rst  rollit.runtime.rst  rollit.runtime.run.rst  rollit.runtime.scope.rst  rollit.runtime.towers.rst  (+2 more)
docs/general/: dialects.rst  faq.rst  notation.rst  overview.rst  todo.rst
docs/language-reference/: dialects.rst  expressions.rst  keywords.rst  operators.rst  overview.rst  statements.rst  toc.rst  types.rst
docs/standard-library/: bags.rst  io.rst  loading.rst  maths.rst  os.rst  rolls.rst  rootlib.rst  runtime.rst  strings.rst  toc.rst
samples/: basic-rolls.rollit  dnd5e_character_sheet.rollit  enlarging.rollit  math.rollit  modifier-def.rollit  reduction.rollit  strings.rollit
src/rollit/: __main__.py  _parser.py  actions.py  ast.py  core.py  dialect.py  elements.py  exceptions.py  execution.py  grammar.py  grammar.tatsu  internal_objects.py  lai.py  langref.py  language_ref.py  main.py  model.py  objects.py  parser.py  rli.py  semantics.py  transformer.py  util.py
src/rollit/ast/: __init__.py  actions.py  base.py  constants.py  elements.py  internal.py  util.py
src/rollit/execution/: __init__.py  base.py  core.py  load_evaluators.py  objects.py  scope.py  stdlib.py  towers.py
src/rollit/extra/: pygments.py
src/rollit/libraries/: dnd5e.rollit
src/rwi/: model.py
tests/: __init__.py  conftest.py  util.py
tests/evaluation/: conftest.py  test_bags.py  test_conditionals.py  test_expressions.py  test_loops.py  test_modifiers.py  test_statements.py  util.py
tests/larger_scripts/: subject_change.rollit
tests/parsing/: conftest.py  test_bags.py  test_conditionals.py  test_expressions.py  test_loops.py  test_main.py  test_optimizations.py  test_statements.py  util.py
tests/scripts/: examples-1.rwi
(+39 files in other folders)
