[metadata]
ame = rollit
version = 0.0.1
description  =  A dice roller interface and library built in python.
url = https://github.com/russels-crockpot/rollit
author = Brendan McGloin
author_email = russels_dash_crockpot-at-gmail
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/russels-crockpot/rollit/issues
    Source Code = https://github.com/russels-crockpot/rollit

[options]
package_dir = src
packages = find:
python_requires = >=3.7
tests_requires =
    pytest
    hypothesis

[options.packages.find]
where=src

[options.extra_requires]
cli =
    click
    prompt_toolkit

documentaton =
    chios
    sphinx
    sphinxcontrib.spelling
    sphinx-git
    sphinx-issues
    sphinx_rtd_theme
    humanfriendly

development =
    pre-commit
    lark-parser


[yapf]
align_closing_bracket_with_visual_indent = false
allow_multiline_dictionary_keys = false
allow_multiline_lambdas = false
allow_split_before_dict_value = true
blank_lines_around_top_level_definition = 2
blank_line_before_class_docstring = false
blank_line_before_module_docstring = false
blank_line_before_nested_class_or_def = true
coalesce_brackets = false
column_limit = 100
continuation_align_style = SPACE
continuation_indent_width = 4
dedent_closing_brackets = true
disable_ending_comma_heuristic = false
each_dict_entry_on_separate_line = true
i18n_function_call = N_, _
indent_dictionary_value = true
indent_width = 4
indent_closing_brackets = false
join_multiple_lines = true
#no_spaces_around_selected_binary_operators =
spaces_around_default_or_named_assign = false
spaces_around_power_operator = false
spaces_around_dict_delimiters = false
spaces_around_list_delimiters = false
spaces_around_tuple_delimiters = false
spaces_before_comment = 2
space_between_ending_comma_and_closing_bracket = false
space_inside_brackets = false

split_all_comma_separated_values = false
split_arguments_when_comma_terminated = true
split_before_bitwise_operator = false
split_before_closing_bracket = true
split_before_dict_set_generator = true
split_before_dot = true
split_before_expression_after_opening_paren = true
split_before_first_argument = true
split_before_logical_operator = true
split_before_named_assigns = true
split_complex_comprehension = true
use_tabs = false

[build_sphinx]
project = rollit
version = 0.0.1
release = 0.0.1
source-dir = doc
builder =
    spelling
    html

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
testpaths = tests


# vi: filetype=cfg
